crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@01-tuples@tuples_in_cairom__basic_tuple_creation.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Tuples in Cairo-M - Basic Tuple Creation"
input_file: mdtest/03-types/01-tuples.md
---
Test: Tuples in Cairo-M - Basic Tuple Creation
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/03-types/01-tuples.md
============================================================
Source:
fn create_tuple() -> (felt) {
    return (1);
}
============================================================
Generated MIR:
module {
  // Function 0
  fn create_tuple {
    entry: 0

    0:
      return 1

  }

}
