crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@01-tuples@tuples_in_cairom__tuple_destructuring.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Tuples in Cairo-M - Tuple Destructuring"
input_file: mdtest/03-types/01-tuples.md
---
Test: Tuples in Cairo-M - Tuple Destructuring
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/03-types/01-tuples.md
============================================================
Source:
fn destructuring_tuple() -> felt {
    let (a, b, c) = (1, 2, 3);
    return a + b + c;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn destructuring_tuple {
    entry: 0

    0:
      %0 = 1
      %1 = 2
      %2 = 3
      %3 = %0 Add %1
      %4 = %3 Add %2
      return %4

  }

}
