crates/compiler/mir/tests/snapshots/mdtest_snapshots__mdtest_mir_snapshots@01-tuples@tuples_in_cairom__tuple_member_access.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Tuples in Cairo-M - Tuple Member Access"
input_file: mdtest/03-types/01-tuples.md
---
Test: Tuples in Cairo-M - Tuple Member Access
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/03-types/01-tuples.md
============================================================
Source:
fn access_tuple_member() -> felt {
    let my_tuple = (1, 2, 3);
    return my_tuple.0 + my_tuple.1 + my_tuple.2;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn access_tuple_member {
    entry: 0

    0:
      %8 = 1 Add 2
      %11 = %8 Add 3
      return %11

  }

}
